--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
         <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="css/fonts.css" media="screen" title="no title" charset="utf-8">
         <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <header>
-
+            <div class="outer-header-container">
+                <!-- <img src="images/lines.svg" alt="lines lol" /> -->
+            </div>
         </header>
         <div class="outer-container flex-center">
             <div class="malovich"></div>
@@ -18,10 +21,16 @@
             <img class="more-lines"src="images/blue-lines.svg" alt="more lines lol" />
             <div class="hero-container">
                 <h1>Thanks for stopping by.</h1>
-                <p>
-                    A <strong>designer</strong> currently studying and working in <strong>Victoria, BC</strong>. I am completing my last year of my
+                <!-- <p>
+                    I'm a <strong>designer</strong> currently studying and working in <strong>Victoria, BC</strong>. I am completing my last year of my
                     combined major in Computer Science and Visual Arts at the University of Victoria.
-                </p>
+                </p> -->
+                <p>my portfolio is currently in the making. In the mean time:</p>
+                <div class="contact-links">
+                    <a target="_blank" href="https://twitter.com/kelseylegault">twitter</a>
+                    <a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram</a>
+                    <a target="_blank" href="https://www.linkedin.com/in/kelsey-legault-32417a93">linkedin</a>
+                </div>
             </div>
         </div>
     </body>
