Apply 100 percent vh to outer-container

--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <header>
-            <div class="outer-header-container">
-                <!-- <img src="images/lines.svg" alt="lines lol" /> -->
-            </div>
-        </header>
         <div class="outer-container flex-center">
             <div class="malovich"></div>
             <div class="grey-rectangle"></div>
@@ -25,7 +20,7 @@
                     I'm a <strong>designer</strong> currently studying and working in <strong>Victoria, BC</strong>. I am completing my last year of my
                     combined major in Computer Science and Visual Arts at the University of Victoria.
                 </p> -->
-                <p>my portfolio is currently in the making. In the mean time:</p>
+                <p>I'm currently working on making my portfolio better. In the mean time:</p>
                 <div class="contact-links">
                     <a target="_blank" href="https://twitter.com/kelseylegault">twitter</a>
                     <a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram</a>
