--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
         <title>~</title>
-        <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
-        <link rel="stylesheet" href="css/fonts.css" media="screen" title="no title" charset="utf-8">
-        <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+
+        <!-- Facebook Meta Properties -->
+        <meta property="og:image" content="http://kelseylegault.com/images/metaimage.jpg">
+        <meta property="og:title" content="Kelsey Legault">
+        <meta property="og:site_name" content="Kelsey Legault"/>
+        <meta property="og:description" content="I am a designer living in Victoria, BC">
+        <meta property="og:url" content="http://kelseylegault.com" />
+
+        <!-- Generic Meta Properties -->
+        <meta charset="UTF-8">
+        <meta name="description" content="I am a designer living in Victoria, BC">
+        <meta name="keywords" content="Portfolio, Designer, Design, Kelsey Legault">
+        <meta name="author" content="Kelsey Legault">
+
+        <!-- Favicon -->
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+
+        <!-- Mobile -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="../css/animations.css">
+
+        <!-- Fonts -->
+        <link rel="stylesheet" href="css/fonts.css" media="screen" title="no title" charset="utf-8">
+        <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+
+        <!-- Javascript -->
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-73962302-1', 'auto');
+          ga('send', 'pageview');
+        </script>
     </head>
     <body>
         <div class="outer-container flex-center">
@@ -16,11 +49,13 @@
             <img class="more-lines"src="images/blue-lines.svg" alt="more lines lol" />
             <div class="hero-container">
                 <h1>Thanks for stopping by.</h1>
+                <!-- <p>You're visiting Kelsey Legault's design portfolio.</p> -->
                 <!-- <p>
                     I'm a <strong>designer</strong> currently studying and working in <strong>Victoria, BC</strong>. I am completing my last year of my
                     combined major in Computer Science and Visual Arts at the University of Victoria.
                 </p> -->
-                <p>I'm currently working on making my portfolio better. In the mean time:</p>
+                <p>You're visiting <strong>Kelsey Legault</strong>'s design portfolio, however she's in the midst of redesigning it.
+                    In the mean time:</p>
                 <div class="contact-links">
                     <a target="_blank" href="https://twitter.com/kelseylegault">twitter</a>
                     <a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram</a>
