--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
                 <p>You're visiting <strong>Kelsey Legault</strong>'s design portfolio, however she's in the midst of redesigning it.
                     In the mean time:</p>
                 <div class="contact-links">
-                    <a target="_blank" href="https://twitter.com/kelseylegault">twitter</a>
                     <a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram</a>
+                    <a target="_blank" href="https://twitter.com/kelseylegault">twitter</a>
+                    <a target="_blank" href="https://github.com/kelseyll">github</a>
                     <a target="_blank" href="https://www.linkedin.com/in/kelsey-legault-32417a93">linkedin</a>
                 </div>
             </div>
