--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="../css/animations.css">
+        <link rel="stylesheet" type="text/css" href="css/animations.css">
 
         <!-- Fonts -->
         <link rel="stylesheet" href="css/fonts.css" media="screen" title="no title" charset="utf-8">
