--- a/index.html
+++ b/index.html
@@ -42,22 +42,16 @@
         </script>
     </head>
     <body>
-        <div class="outer-container flex-center">
-            <div class="hero-container">
-                <h1>Thanks for stopping by.</h1>
-                <!-- <p>You're visiting Kelsey Legault's design portfolio.</p> -->
-                <!-- <p>
-                    I'm a <strong>designer</strong> currently studying and working in <strong>Victoria, BC</strong>. I am completing my last year of my
-                    combined major in Computer Science and Visual Arts at the University of Victoria.
-                </p> -->
-                <p>You're visiting <strong>Kelsey Legault</strong>'s design portfolio, however she's in the midst of redesigning it.
-                    In the mean time:</p>
-                <div class="contact-links">
-                    <a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram</a>
-                    <a target="_blank" href="https://twitter.com/kelseylegault">twitter</a>
-                    <a target="_blank" href="https://github.com/kelseyll">github</a>
-                    <a target="_blank" href="https://www.linkedin.com/in/kelsey-legault-32417a93">linkedin</a>
-                </div>
+        <div class="hero-container">
+            <img src="images/gif.gif" alt="" />
+            <h1>Thanks for stopping by.</h1>
+            <p>You're visiting <strong>Kelsey Legault</strong>'s design portfolio, however she is currently redesigning it.
+                In the mean time:</p>
+            <div class="contact-links">
+                <a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram</a> /
+                <a target="_blank" href="https://twitter.com/kelseylegault">twitter</a> /
+                <a target="_blank" href="https://vimeo.com/user23617166">vimeo</a> /
+                <a target="_blank" href="https://github.com/kelseyll">github</a>
             </div>
         </div>
     </body>
