--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         <div class="hero-container">
             <img src="images/gif.gif" alt="" />
             <h1>Thanks for stopping by.</h1>
-            <p>You're visiting <strong>Kelsey Legault</strong>'s design portfolio, however she is currently redesigning it.
-                In the mean time:</p>
+            <p>I'm currently redesigning my portfolio. In the mean time:</p>
             <div class="contact-links">
                 <a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram</a> /
                 <a target="_blank" href="https://twitter.com/kelseylegault">twitter</a> /
