Start addingfull portfolio hero elements

--- a/index.html
+++ b/index.html
@@ -43,15 +43,12 @@
     </head>
     <body>
         <div class="hero-container">
-            <img src="images/gif.gif" alt="" />
+            <div class="hero-pink-rectangle"></div>
             <h1>Thanks for stopping by.</h1>
-            <p>I'm currently redesigning my portfolio. In the meantime:</p>
-            <div class="contact-links">
-                <a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram</a> /
-                <a target="_blank" href="https://twitter.com/kelseylegault">twitter</a> /
-                <a target="_blank" href="https://vimeo.com/user23617166">vimeo</a> /
-                <a target="_blank" href="https://github.com/kelseyll">github</a>
-            </div>
+            <p>
+                I’m a <strong>ui/ux designer / artist</strong> living in Victoria, BC. I’m currently finishing up my last year of my
+                <strong>computer science / visual arts</strong> degree.
+            </p>
         </div>
     </body>
 </html>
