--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <div class="hero-container">
             <div class="hero-pink-rectangle"></div>
             <h1>Thanks for stopping by.</h1>
+            <img class="left-hero-image" src="images/left.png" alt="tvs lol" />
             <p>
                 I’m a <strong>ui/ux designer / artist</strong> living in Victoria, BC. I’m currently finishing up my last year of my
                 <strong>computer science / visual arts</strong> degree.
