Add more images

--- a/index.html
+++ b/index.html
@@ -42,15 +42,18 @@
         </script>
     </head>
     <body>
-        <div class="hero-container">
+        <div class="outer-container">
             <div class="hero-pink-rectangle"></div>
-            <h1>Thanks for stopping by.</h1>
-            <img class="left-hero-image" src="images/left.png" alt="tvs lol" />
-            <img class="center-hero-image" src="images/center.png" alt="paperback" />
-            <p>
-                I’m a <strong>ui/ux designer / artist</strong> living in Victoria, BC. I’m currently finishing up my last year of my
-                <strong>computer science / visual arts</strong> degree.
-            </p>
+            <div class="hero-container">
+                <h1>Thanks for stopping by.</h1>
+                <img class="left-hero-image" src="images/left.png" alt="tvs lol" />
+                <img class="center-hero-image" src="images/center.png" alt="paperback" />
+                <img class="right-hero-image" src="images/right.png" alt="paperback" />
+                <p>
+                    I’m a <strong>ui/ux designer / artist</strong> living in Victoria, BC. I’m currently finishing up my last year of my
+                    <strong>computer science / visual arts</strong> degree.
+                </p>
+            </div>
         </div>
     </body>
 </html>
