Add header and diamonds

--- a/index.html
+++ b/index.html
@@ -45,11 +45,16 @@
         <div class="outer-container">
             <div class="hero-pink-rectangle"></div>
             <div class="hero-container">
+                <header>
+                    <p>Kelsey Legault</p>
+                </header>
                 <h1>Thanks for stopping by.</h1>
                 <img class="left-hero-image" src="images/left.png" alt="tvs lol" />
+                <img class="diamonds-image" src="images/shinebrightlikea.png" alt="shiny" />
+                <img class="light-image" src="images/light.png" alt="lamp" />
                 <img class="center-hero-image" src="images/center.png" alt="paperback" />
                 <img class="right-hero-image" src="images/right.png" alt="paperback" />
-                <p>
+                <p class="hero-paragraph">
                     I’m a <strong>ui/ux designer / artist</strong> living in Victoria, BC. I’m currently finishing up my last year of my
                     <strong>computer science / visual arts</strong> degree.
                 </p>
