--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <!-- Fonts -->
         <link rel="stylesheet" href="css/fonts.css" media="screen" title="no title" charset="utf-8">
         <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
 
         <!-- Javascript -->
         <script>
@@ -58,6 +59,16 @@
                     I’m a <strong>ui/ux designer / artist</strong> living in Victoria, BC. I’m currently finishing up my last year of my
                     <strong>computer science / visual arts</strong> degree.
                 </p>
+            </div>
+            <div class="work-items-container">
+                <h1>my work</h1>
+                <ul>
+                    <a href="#"><li><span>jcura research scholarship</span><span>website <i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>website <i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>website <i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>website <i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>website <i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></span></li></a>
+                </ul>
             </div>
         </div>
     </body>
