add footer image

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                     <a href="#"><li><span>jcura research scholarship</span><span>website <i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></span></li></a>
                 </ul>
             </div>
+            <footer>
+                <img class="footer-image" src="images/footer.png" alt="footer" />
+            </footer>
         </div>
     </body>
 </html>
