Add height query to h1

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img class="center-hero-image" src="images/center.png" alt="paperback" />
                 <img class="right-hero-image" src="images/right.png" alt="paperback" />
                 <p class="hero-paragraph">
-                    I’m a <strong>ui/ux designer / artist</strong> living in Victoria, BC. I’m currently finishing up my last year of my
+                    I’m a <strong>ui/ux designer / artist</strong> living in Victoria, BC. I’m currently finishing up the last year of my
                     <strong>computer science / visual arts</strong> degree.
                 </p>
             </div>
