Add vine for larger screens

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
                 </header>
                 <h1>Thanks for stopping by.</h1>
                 <img class="left-hero-image" src="images/left.png" alt="tvs lol" />
-                <img class="diamonds-image" src="images/shinebrightlikea.png" alt="shiny" />
+                <img class="diamonds-image" src="images/diamonds.png" alt="shiny" />
                 <img class="light-image" src="images/light.png" alt="lamp" />
+                <img class="vine-image" src="images/vine.png" alt="lamp" />
                 <img class="center-hero-image" src="images/center.png" alt="paperback" />
                 <img class="right-hero-image" src="images/right.png" alt="paperback" />
                 <p class="hero-paragraph">
