Push broken links

--- a/index.html
+++ b/index.html
@@ -72,7 +72,19 @@
                 </ul>
             </div>
             <footer>
+                <div class="footer-left-rectangle">
+                        <a target="_blank" href="mailto:kelsey.legault@gmail.com">kelsey.legault@gmail.com</a>
+                </div>
                 <img class="footer-image" src="images/footer.png" alt="footer" />
+                <div class="footer-right-rectangle">
+                    <ul>
+                        <li><a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
+                        <li><a target="_blank" href="https://twitter.com/kelseylegault">twitter<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
+                        <li><a target="_blank" href="https://vimeo.com/user23617166">vimeo<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
+                        <li><a target="_blank" href="https://github.com/kelseyll">github<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
+                        <li><a target="_blank" href="https://ca.linkedin.com/in/kelsey-legault-32417a93">linkedin<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
+                    </ul>
+                </div>
             </footer>
         </div>
     </body>
