--- a/index.html
+++ b/index.html
@@ -73,14 +73,16 @@
             </div>
             <footer>
                 <div class="footer-left-rectangle">
-                        <a target="_blank" href="mailto:kelsey.legault@gmail.com">kelsey.legault@gmail.com</a>
                 </div>
                 <img class="footer-image" src="images/footer.png" alt="footer" />
                 <div class="footer-right-rectangle">
+                </div>
+                <div class="footer-text-container">
+                    <a class="footer-mailto" target="_blank" href="mailto:kelsey.legault@gmail.com">kelsey.legault@gmail.com</a>
                     <ul>
                         <li><a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
-                        <li><a target="_blank" href="https://twitter.com/kelseylegault">twitter<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
                         <li><a target="_blank" href="https://vimeo.com/user23617166">vimeo<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
+                        <li><a target="_blank" href="https://twitter.com/kelseylegault">twitter<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
                         <li><a target="_blank" href="https://github.com/kelseyll">github<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
                         <li><a target="_blank" href="https://ca.linkedin.com/in/kelsey-legault-32417a93">linkedin<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
                     </ul>
