Fix footer links

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
             <div class="work-items-container">
                 <h1>my work</h1>
                 <ul>
-                    <a href="#"><li><span>jcura research scholarship</span><span>website <i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></span></li></a>
-                    <a href="#"><li><span>jcura research scholarship</span><span>website <i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></span></li></a>
-                    <a href="#"><li><span>jcura research scholarship</span><span>website <i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></span></li></a>
-                    <a href="#"><li><span>jcura research scholarship</span><span>website <i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></span></li></a>
-                    <a href="#"><li><span>jcura research scholarship</span><span>website <i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>website <i>&nbsp;</i></span></li></a>
                 </ul>
             </div>
             <footer>
@@ -80,11 +80,11 @@
                 <div class="footer-text-container">
                     <a class="footer-mailto" target="_blank" href="mailto:kelsey.legault@gmail.com">kelsey.legault@gmail.com</a>
                     <ul>
-                        <li><a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
-                        <li><a target="_blank" href="https://vimeo.com/user23617166">vimeo<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
-                        <li><a target="_blank" href="https://twitter.com/kelseylegault">twitter<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
-                        <li><a target="_blank" href="https://github.com/kelseyll">github<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
-                        <li><a target="_blank" href="https://ca.linkedin.com/in/kelsey-legault-32417a93">linkedin<i class="zmdi zmdi-hc-lg zmdi-arrow-right"></i></a></li>
+                        <li><a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram<i>&nbsp;</i></a></li>
+                        <li><a target="_blank" href="https://vimeo.com/user23617166">vimeo<i>&nbsp;</i></a></li>
+                        <li><a target="_blank" href="https://twitter.com/kelseylegault">twitter<i>&nbsp;</i></a></li>
+                        <li><a target="_blank" href="https://github.com/kelseyll">github<i>&nbsp;</i></a></li>
+                        <li><a target="_blank" href="https://ca.linkedin.com/in/kelsey-legault-32417a93">linkedin<i>&nbsp;</i></a></li>
                     </ul>
                 </div>
             </footer>
