Change left hero image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>Kelsey Legault</p>
                 </header>
                 <h1>Thanks for stopping by.</h1>
-                <img class="left-hero-image" src="images/left.png" alt="tvs lol" />
+                <img class="left-hero-image" src="images/left-building.png" alt="tvs lol" />
                 <img class="diamonds-image" src="images/diamonds.png" alt="shiny" />
                 <img class="light-image" src="images/light.png" alt="lamp" />
                 <img class="vine-image" src="images/vine.png" alt="lamp" />
