Add date on work item hover

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <header>
                     <p>Kelsey Legault</p>
                 </header>
-                <h1>Thanks for stopping by.</h1>
+                <h1  class="hover-test">Thanks for stopping by.</h1>
                 <img class="left-hero-image" src="images/left-building.png" alt="tvs lol" />
                 <img class="diamonds-image" src="images/diamonds.png" alt="shiny" />
                 <img class="light-image" src="images/light.png" alt="lamp" />
@@ -62,13 +62,13 @@
                 </p>
             </div>
             <div class="work-items-container">
-                <h1>my work</h1>
+                <h1 class="hover-test">my work</h1>
                 <ul>
-                    <a href="#"><li><span>jcura research scholarship</span><span>website <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>jcura research scholarship</span><span>website <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>jcura research scholarship</span><span>website <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>jcura research scholarship</span><span>website <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>jcura research scholarship</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015</span><span>website <i>&nbsp;</i></span></li></a>
                 </ul>
             </div>
             <footer>
@@ -89,5 +89,7 @@
                 </div>
             </footer>
         </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
