Apply new color scheme and hero images

--- a/index.html
+++ b/index.html
@@ -44,18 +44,16 @@
     </head>
     <body>
         <div class="outer-container">
-            <div class="hero-pink-rectangle"></div>
+            <div class="hero-left-rectangle"></div>
             <div class="hero-container">
                 <header>
                     <p>Kelsey Legault</p>
                 </header>
                 <h1  class="hover-test">Thanks for stopping by.</h1>
-                <img class="left-hero-image" src="images/left-building.png" alt="tvs lol" />
-                <img class="diamonds-image" src="images/diamonds.png" alt="shiny" />
-                <img class="light-image" src="images/light.png" alt="lamp" />
-                <img class="vine-image" src="images/vine.png" alt="lamp" />
-                <img class="center-hero-image" src="images/center.png" alt="paperback" />
-                <img class="right-hero-image" src="images/right.png" alt="paperback" />
+                <img class="left-hero-image" src="images/left-square.svg" alt="tvs lol" />
+                <img class="lamp-image" src="images/lamp.png" alt="lamp" />
+                <img class="center-hero-image" src="images/fern+square.png" alt="paperback" />
+                <img class="right-hero-image" src="images/flamingo+square.png" alt="flamingo" />
                 <p class="hero-paragraph">
                     I’m a <strong>ui/ux designer / artist</strong> living in Victoria, BC. I’m currently finishing up the last year of my
                     <strong>computer science / visual arts</strong> degree.
