Take away fade from work item animation

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             <div class="work-items-container">
                 <h1 class="hover-test">my work</h1>
                 <ul>
-                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015</span><span>website <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015</span><span>website <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015</span><span>website <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015</span><span>website <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015 /</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015 /</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015 /</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015 /</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>aug 2015 /</span><span>website <i>&nbsp;</i></span></li></a>
                 </ul>
             </div>
             <footer>
