--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </p>
             </div>
             <div class="work-items-container">
-                <h1 class="hover-test">my work</h1>
+                <h1>my work</h1>
                 <ul>
                     <a href="#"><li><span>jcura research scholarship</span><span>aug 2015 /</span><span>website <i>&nbsp;</i></span></li></a>
                     <a href="#"><li><span>jcura research scholarship</span><span>aug 2015 /</span><span>website <i>&nbsp;</i></span></li></a>
