--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     I’m a <strong>ui/ux designer / artist</strong> living in Victoria, BC. I’m currently finishing up the last year of my
                     <strong>computer science / visual arts</strong> degree.
                 </p>
+                <img class="arrow-image" src="images/arrow-down.svg" alt="" />
             </div>
             <div class="work-items-container">
                 <h1>my work</h1>
