Move dates to left

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
             <div class="work-items-container">
                 <h1>my work</h1>
                 <ul>
-                    <a href="#"><li><span>jcura research scholarship</span><span>jan 2016 /</span><span>web app <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>ad campaign landing page</span><span>sept 2015 /</span><span>website <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>wait what installation</span><span>nov 2015 /</span><span>documentation <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>hackathon landing page</span><span>feb 2016 /</span><span>website <i>&nbsp;</i></span></li></a>
-                    <a href="#"><li><span>jcura research scholarship</span><span>jan 2016 /</span><span>web app <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>/ jan 2016</span><span>web app <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>ad campaign landing page</span><span>/ sept 2015</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>wait what installation</span><span>/ nov 2015</span><span>documentation <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>hackathon landing page</span><span>/ feb 2016</span><span>website <i>&nbsp;</i></span></li></a>
+                    <a href="#"><li><span>jcura research scholarship</span><span>/ jan 2016</span><span>web app <i>&nbsp;</i></span></li></a>
                 </ul>
             </div>
             <footer>
