--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <img class="center-hero-image" src="images/fern+square.png" alt="paperback" />
                 <img class="right-hero-image" src="images/flamingo+square.png" alt="flamingo" />
                 <p class="hero-paragraph">
-                    I’m a <strong>ui/ux designer / artist</strong> living in Victoria, BC. I’m currently finishing up the last year of my
-                    <strong>computer science / visual arts</strong> degree.
+                    I’m a <strong>ui/ux designer and artist</strong> based in Victoria, BC. I’m currently finishing up the last year of my
+                    <strong>computer science and visual arts</strong> degree.
                 </p>
                 <figure><img class="arrow-image" src="images/arrow-down.svg" alt="" /></figure>
             </div>
