--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
                     <p>Kelsey Legault</p>
                 </header>
                 <h1  class="hover-test">Thanks for stopping by.</h1>
-                <img class="left-hero-image" src="images/left-square.svg" alt="tvs lol" />
+                <img class="left-hero-square" src="images/left-square.svg" alt="tvs lol" />
+                <img class="fern" src="images/fern.png" alt="paperback" />
+                <img class="center-hero-square" src="images/center-square.svg" alt="tvs lol" />
+                <img class="flamingo" src="images/flamingo.png" alt="flamingo" />
+                <img class="right-hero-square" src="images/right-square.svg" alt="tvs lol" />
                 <img class="lamp-image" src="images/lamp.png" alt="lamp" />
-                <img class="center-hero-image" src="images/fern+square.png" alt="paperback" />
-                <img class="right-hero-image" src="images/flamingo+square.png" alt="flamingo" />
                 <p class="hero-paragraph">
-                    I’m a <strong>ui/ux designer and artist</strong> based in Victoria, BC. I’m currently finishing up the last year of my
+                    I’m a <strong>designer and artist</strong> based in Victoria, BC. I’m currently finishing up the last year of my
                     <strong>computer science and visual arts</strong> degree.
                 </p>
                 <figure><img class="arrow-image" src="images/arrow-down.svg" alt="" /></figure>
