Delete unused images

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img class="center-hero-square" src="images/center-square.svg" alt="tvs lol" />
                 <img class="flamingo" src="images/flamingo.png" alt="flamingo" />
                 <img class="right-hero-square" src="images/right-square.svg" alt="tvs lol" />
-                <img class="lamp-image" src="images/lamp.png" alt="lamp" />
+                <img class="lamp" src="images/lamp.png" alt="lamp" />
                 <p class="hero-paragraph">
                     I’m a <strong>designer and artist</strong> based in Victoria, BC. I’m currently finishing up the last year of my
                     <strong>computer science and visual arts</strong> degree.
