Make site responsive

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img class="center-hero-square" src="images/center-square.svg" alt="tvs lol" />
                 <img class="flamingo" src="images/flamingo.png" alt="flamingo" />
                 <img class="right-hero-square" src="images/right-square.svg" alt="tvs lol" />
-                <img class="lamp" src="images/lamp.png" alt="lamp" />
+                <!-- <img class="lamp" src="images/lamp.png" alt="lamp" /> -->
                 <p class="hero-paragraph">
                     I’m a <strong>designer and artist</strong> based in Victoria, BC. I’m currently finishing up the last year of my
                     <strong>computer science and visual arts</strong> degree.
@@ -79,6 +79,7 @@
                 <div class="footer-left-rectangle">
                 </div>
                 <div class="footer-text-container">
+                    <h1>contact</h1>
                     <a class="footer-mailto" target="_blank" href="mailto:kelsey.legault@gmail.com">kelsey.legault@gmail.com</a>
                     <ul>
                         <li><a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram<i>&nbsp;</i></a></li>
