--- a/index.html
+++ b/index.html
@@ -49,17 +49,13 @@
                 <header>
                     <p>Kelsey Legault</p>
                 </header>
-                <h1  class="hover-test">Thanks for stopping by.</h1>
-                <img class="left-hero-square" src="images/left-square.svg" alt="tvs lol" />
-                <img class="fern" src="images/fern.png" alt="paperback" />
-                <img class="center-hero-square" src="images/center-square.svg" alt="tvs lol" />
-                <img class="flamingo" src="images/flamingo.png" alt="flamingo" />
-                <img class="right-hero-square" src="images/right-square.svg" alt="tvs lol" />
+                <h1>Kelsey Legault</h1>
+                <!-- <img class="left-hero-square" src="images/left-square.svg" alt="tvs lol" /> -->
+                <img class="computersquare" src="images/computersquare.png" alt="computer" />
+                <!-- <img class="center-hero-square" src="images/center-square.svg" alt="tvs lol" /> -->
+                <img class="fern" src="images/fernsquare.png" alt="fern" />
+                <!-- <img class="right-hero-square" src="images/right-square.svg" alt="tvs lol" /> -->
                 <!-- <img class="lamp" src="images/lamp.png" alt="lamp" /> -->
-                <p class="hero-paragraph">
-                    I’m a <strong>designer and artist</strong> based in Victoria, BC. I’m currently finishing up the last year of my
-                    <strong>computer science and visual arts</strong> degree.
-                </p>
                 <figure><img class="arrow-image" src="images/arrow-down.svg" alt="" /></figure>
             </div>
             <div class="work-items-container">
@@ -71,6 +67,12 @@
                     <a href="#"><li><span>hackathon landing page</span><span>/ feb 2016</span><span>website <i>&nbsp;</i></span></li></a>
                     <a href="#"><li><span>jcura research scholarship</span><span>/ jan 2016</span><span>web app <i>&nbsp;</i></span></li></a>
                 </ul>
+            </div>
+            <div class="">
+                <p>
+                    I’m a <strong>designer and artist</strong> based in Victoria, BC. I’m currently finishing up the last year of my
+                    <strong>computer science and visual arts</strong> degree.
+                </p>
             </div>
             <footer>
                 <img class="footer-image" src="images/footer.png" alt="footer" />
