--- a/index.html
+++ b/index.html
@@ -44,22 +44,38 @@
     </head>
     <body>
         <div class="outer-container">
-            <div class="hero-left-rectangle"></div>
+            <!-- <div class="hero-left-rectangle"></div> -->
             <div class="hero-container">
                 <header>
                     <p>Kelsey Legault</p>
+                    <a>mute music</a>
                 </header>
                 <h1>Kelsey Legault</h1>
+                <div class="skillzsqaure">
+                    <ul>
+                        <li>ui/ux design</li>
+                        <li>branding</li>
+                        <li>art direction</li>
+                        <li>graphic design</li>
+                        <li>front-end development</li>
+                        <li>illustration</li>
+                    </ul>
+                </div>
                 <!-- <img class="left-hero-square" src="images/left-square.svg" alt="tvs lol" /> -->
                 <img class="computersquare" src="images/computersquare.png" alt="computer" />
                 <!-- <img class="center-hero-square" src="images/center-square.svg" alt="tvs lol" /> -->
-                <img class="fern" src="images/fernsquare.png" alt="fern" />
+                <img class="fernsquare" src="images/fernsquare.png" alt="fern" />
                 <!-- <img class="right-hero-square" src="images/right-square.svg" alt="tvs lol" /> -->
                 <!-- <img class="lamp" src="images/lamp.png" alt="lamp" /> -->
                 <figure><img class="arrow-image" src="images/arrow-down.svg" alt="" /></figure>
             </div>
+            <div class="">
+                <p class="tldr">
+                    I’m a <strong>designer and artist</strong> based in Victoria, BC. I’m currently finishing up the last year of my
+                    <strong>computer science and visual arts</strong> degree.
+                </p>
+            </div>
             <div class="work-items-container">
-                <h1>my work</h1>
                 <ul>
                     <a href="#"><li><span>jcura research scholarship</span><span>/ jan 2016</span><span>web app <i>&nbsp;</i></span></li></a>
                     <a href="#"><li><span>ad campaign landing page</span><span>/ sept 2015</span><span>website <i>&nbsp;</i></span></li></a>
@@ -67,12 +83,6 @@
                     <a href="#"><li><span>hackathon landing page</span><span>/ feb 2016</span><span>website <i>&nbsp;</i></span></li></a>
                     <a href="#"><li><span>jcura research scholarship</span><span>/ jan 2016</span><span>web app <i>&nbsp;</i></span></li></a>
                 </ul>
-            </div>
-            <div class="">
-                <p>
-                    I’m a <strong>designer and artist</strong> based in Victoria, BC. I’m currently finishing up the last year of my
-                    <strong>computer science and visual arts</strong> degree.
-                </p>
             </div>
             <footer>
                 <img class="footer-image" src="images/footer.png" alt="footer" />
