--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
             <!-- <div class="hero-left-rectangle"></div> -->
             <div class="hero-container">
                 <header>
-                    <p>Kelsey Legault</p>
-                    <a>mute music</a>
+                    <div class="header-left">
+                        <a href="mailto:kelseylegault@gmail.com">kelsey.legault@gmail.com</a>
+                    </div>
+                    <p>Victoria, BC</p>
                 </header>
                 <h1>Kelsey Legault</h1>
                 <div class="skillzsqaure">
@@ -71,8 +73,8 @@
             </div>
             <div class="">
                 <p class="tldr">
-                    I’m a <strong>designer and artist</strong> based in Victoria, BC. I’m currently finishing up the last year of my
-                    <strong>computer science and visual arts</strong> degree.
+                    I’m a designer and artist working and studying in Victoria, BC. I’m currently finishing the last
+                    year of my Computer Science and Visual Arts degree at the University of Victoria.
                 </p>
             </div>
             <div class="work-items-container">
@@ -85,11 +87,6 @@
                 </ul>
             </div>
             <footer>
-                <img class="footer-image" src="images/footer.png" alt="footer" />
-                <div class="footer-right-rectangle">
-                </div>
-                <div class="footer-left-rectangle">
-                </div>
                 <div class="footer-text-container">
                     <h1>contact</h1>
                     <a class="footer-mailto" target="_blank" href="mailto:kelsey.legault@gmail.com">kelsey.legault@gmail.com</a>
