Position elements for mobile

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="hero-container">
                 <header>
                     <div class="header-left">
-                        <a href="mailto:kelseylegault@gmail.com">kelsey.legault@gmail.com</a>
+                        <a target="_blank" href="mailto:kelseylegault@gmail.com">kelsey.legault@gmail.com</a>
                     </div>
                     <p>Victoria, BC</p>
                 </header>
@@ -63,12 +63,9 @@
                         <li>illustration</li>
                     </ul>
                 </div>
-                <!-- <img class="left-hero-square" src="images/left-square.svg" alt="tvs lol" /> -->
                 <img class="computersquare" src="images/computersquare.png" alt="computer" />
-                <!-- <img class="center-hero-square" src="images/center-square.svg" alt="tvs lol" /> -->
                 <img class="fernsquare" src="images/fernsquare.png" alt="fern" />
-                <!-- <img class="right-hero-square" src="images/right-square.svg" alt="tvs lol" /> -->
-                <!-- <img class="lamp" src="images/lamp.png" alt="lamp" /> -->
+                <img class="fernsquare-orange" src="images/fernsquare-orange.png" alt="fern" />
                 <figure><img class="arrow-image" src="images/arrow-down.svg" alt="" /></figure>
             </div>
             <div class="">
