--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     year of my Computer Science and Visual Arts degree at the University of Victoria.
                 </p>
             </div>
-            <div class="work-items-container">
+            <!-- <div class="work-items-container">
                 <ul>
                     <a href="#"><li><span>jcura research scholarship</span><span>/ jan 2016</span><span>web app <i>&nbsp;</i></span></li></a>
                     <a href="#"><li><span>ad campaign landing page</span><span>/ sept 2015</span><span>website <i>&nbsp;</i></span></li></a>
@@ -82,10 +82,9 @@
                     <a href="#"><li><span>hackathon landing page</span><span>/ feb 2016</span><span>website <i>&nbsp;</i></span></li></a>
                     <a href="#"><li><span>jcura research scholarship</span><span>/ jan 2016</span><span>web app <i>&nbsp;</i></span></li></a>
                 </ul>
-            </div>
+            </div> -->
             <footer>
                 <div class="footer-text-container">
-                    <h1>contact</h1>
                     <a class="footer-mailto" target="_blank" href="mailto:kelsey.legault@gmail.com">kelsey.legault@gmail.com</a>
                     <ul>
                         <li><a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram<i>&nbsp;</i></a></li>
