Fix github crisis

--- a/index.html
+++ b/index.html
@@ -44,26 +44,37 @@
     </head>
     <body>
         <div class="outer-container">
-            <div class="hero-left-rectangle"></div>
+            <!-- <div class="hero-left-rectangle"></div> -->
             <div class="hero-container">
                 <header>
-                    <p>Kelsey Legault</p>
+                    <div class="header-left">
+                        <a target="_blank" href="mailto:kelseylegault@gmail.com">kelsey.legault@gmail.com</a>
+                    </div>
+                    <p>Victoria, BC</p>
                 </header>
-                <h1  class="hover-test">Thanks for stopping by.</h1>
-                <img class="left-hero-square" src="images/left-square.svg" alt="tvs lol" />
-                <img class="fern" src="images/fern.png" alt="paperback" />
-                <img class="center-hero-square" src="images/center-square.svg" alt="tvs lol" />
-                <img class="flamingo" src="images/flamingo.png" alt="flamingo" />
-                <img class="right-hero-square" src="images/right-square.svg" alt="tvs lol" />
-                <!-- <img class="lamp" src="images/lamp.png" alt="lamp" /> -->
-                <p class="hero-paragraph">
-                    I’m a <strong>designer and artist</strong> based in Victoria, BC. I’m currently finishing up the last year of my
-                    <strong>computer science and visual arts</strong> degree.
-                </p>
+                <h1>Kelsey Legault</h1>
+                <div class="skillzsqaure">
+                    <ul>
+                        <li>ui/ux design</li>
+                        <li>branding</li>
+                        <li>art direction</li>
+                        <li>graphic design</li>
+                        <li>front-end development</li>
+                        <li>illustration</li>
+                    </ul>
+                </div>
+                <img class="computersquare" src="images/computersquare.png" alt="computer" />
+                <img class="fernsquare" src="images/fernsquare.png" alt="fern" />
+                <img class="fernsquare-orange" src="images/fernsquare-orange.png" alt="fern" />
                 <figure><img class="arrow-image" src="images/arrow-down.svg" alt="" /></figure>
             </div>
-            <div class="work-items-container">
-                <h1>my work</h1>
+            <div class="">
+                <p class="tldr">
+                    I’m a designer and artist working and studying in Victoria, BC. I’m currently finishing the last
+                    year of my Computer Science and Visual Arts degree at the University of Victoria.
+                </p>
+            </div>
+            <!-- <div class="work-items-container">
                 <ul>
                     <a href="#"><li><span>jcura research scholarship</span><span>/ jan 2016</span><span>web app <i>&nbsp;</i></span></li></a>
                     <a href="#"><li><span>ad campaign landing page</span><span>/ sept 2015</span><span>website <i>&nbsp;</i></span></li></a>
@@ -71,15 +82,9 @@
                     <a href="#"><li><span>hackathon landing page</span><span>/ feb 2016</span><span>website <i>&nbsp;</i></span></li></a>
                     <a href="#"><li><span>jcura research scholarship</span><span>/ jan 2016</span><span>web app <i>&nbsp;</i></span></li></a>
                 </ul>
-            </div>
+            </div> -->
             <footer>
-                <img class="footer-image" src="images/footer.png" alt="footer" />
-                <div class="footer-right-rectangle">
-                </div>
-                <div class="footer-left-rectangle">
-                </div>
                 <div class="footer-text-container">
-                    <h1>contact</h1>
                     <a class="footer-mailto" target="_blank" href="mailto:kelsey.legault@gmail.com">kelsey.legault@gmail.com</a>
                     <ul>
                         <li><a target="_blank" href="https://www.instagram.com/kelseyllegault/">instagram<i>&nbsp;</i></a></li>
